--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-admin-template",
-  "version": "4.4.0",
-  "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
+  "name": "weather-push-admin",
+  "version": "1.0.0",
+  "description": "weather-push-admin",
+  "author": "yh.124@qq.com",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build:prod": "vue-cli-service build",
