--- a/nginx.conf
+++ b/nginx.conf
@@ -2,19 +2,25 @@ server {
   listen   80; # 监听的端口 
   server_name  localhost; # 处理的host地址 （请替换成你对应的项目访问 ip 或 域名）!!!
   root    /usr/share/nginx/html; # vue项目存在的目录（替换成你对应的地址，如果你这是用docker部署的请改成你容器内的地址）
+  
   location / {
       try_files $uri $uri/ @router;#需要指向下面的@router否则会出现vue的路由在nginx中刷新出现404
       index  index.html index.htm;
-
-      # 允许所有 HTTP 方法
-      if ($request_method !~ ^(GET|POST|PUT|DELETE|HEAD|OPTIONS)$ ) {
-        return 405;
-      }
   }
+
+  location ^~ /api/ {
+                proxy_read_timeout 300;
+                proxy_pass_header Server;
+                proxy_set_header Host $http_host;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Scheme $scheme;
+                proxy_pass      http://weather-push:8080/;
+        }
+
   #对应上面的@router，主要原因是路由的路径资源并不是一个真实的路径，所以无法找到具体的文件
   #因此需要rewrite到index.html中，然后交给路由在处理请求资源
   location @router {
       rewrite ^.*$ /index.html last;
   }
 }
-
